# remake-sdk

./: README.md  pyproject.toml
examples/: README.md  test_authentication.py  test_cli.sh  test_full_flow.py  test_harness.sh  test_pairing.py  test_pairing_automated.py  test_sdk_pairing.py  test_v2_backend.py
examples/app-dashboard/: .dockerignore  Dockerfile  README.md  app.py  manifest.json
examples/hello-world/: Dockerfile  README.md  app.py  manifest.json
examples/robot-chat/: Dockerfile  README.md  app.py  manifest.json  requirements.txt
remake_agent/: __init__.py  __main__.py  config.py  docker_backend.py  server.py
remake_sdk/: __init__.py
remake_sdk/cli/: __init__.py  app.py  connect.py  dashboard.py  pair.py  runtime.py  sim.py  status.py
remake_sdk/common/: __init__.py  types.py
remake_sdk/dashboard/: __init__.py  server.py
remake_sdk/platform/: __init__.py  client.py  config.py  pairing.py
remake_sdk/podman/: __init__.py
remake_sdk/runtime/: __init__.py  api.py  app_manager.py  app_registry.py  daemon.py
remake_sdk/runtime/backends/: __init__.py  agent_client.py  podman.py
remake_sdk/socketio/: __init__.py  client.py  mock_server.py
tests/: __init__.py  test_platform_config.py
